Enable drop on blank section of sidebar to move to end of the tree

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="sidebar.css">
 	<script type="text/javascript" src="js/htmlUtil.js"></script>
 	<script type="text/javascript" src="js/select.js"></script>
+	<script type="text/javascript" src="js/drag.js"></script>
 	<script type="text/javascript" src="js/tab.js"></script>
 	<script type="text/javascript" src="js/sidebar.js"></script>
 </head>
