--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -4,9 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="sidebar.css">
+	<script type="text/javascript" src="extern/js-syncqueue/src.js"></script>
+	<script type="text/javascript" src="extern/we-tabcache/src.js"></script>
+	<script type="text/javascript" src="js/api.js"></script>
 	<script type="text/javascript" src="js/htmlUtil.js"></script>
 	<script type="text/javascript" src="js/select.js"></script>
 	<script type="text/javascript" src="js/drag.js"></script>
+	<script type="text/javascript" src="js/tree.js"></script>
 	<script type="text/javascript" src="js/tab.js"></script>
 	<script type="text/javascript" src="js/sidebar.js"></script>
 </head>
