Remove embedded vars from sidebar.css, link dark.css in html instead

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="sidebar.css">
+	<link rel="stylesheet" type="text/css" href="dark.css">
 	<script type="text/javascript" src="extern/js-syncqueue/src.js"></script>
 	<script type="text/javascript" src="extern/we-tabcache/src.js"></script>
 	<script type="text/javascript" src="js/api.js"></script>
