Rename drag indicator to drop indicator

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -18,6 +18,6 @@
 <body>
 	<div id="anchor"></div>
 	<div id="selection-box"></div>
-	<div id= "dragIndicator" class="dragIndicator" style="display:none"></div>
+	<div id= "dropIndicator" class="dropIndicator" style="display:none"></div>
 </body>
 </html>
