Add missing file to sidebar.html

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="js/htmlUtil.js"></script>
 	<script type="text/javascript" src="js/select.js"></script>
 	<script type="text/javascript" src="js/drag.js"></script>
+	<script type="text/javascript" src="js/jumptable.js"></script>
 	<script type="text/javascript" src="js/tree.js"></script>
 	<script type="text/javascript" src="js/sidebar.js"></script>
 </head>
