Add missing src file to sidebar html

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="extern/js-syncqueue/src.js"></script>
 	<script type="text/javascript" src="extern/we-tabcache/src.js"></script>
 	<script type="text/javascript" src="js/api.js"></script>
+	<script type="text/javascript" src="js/debug.js"></script>
 	<script type="text/javascript" src="js/htmlUtil.js"></script>
 	<script type="text/javascript" src="js/select.js"></script>
 	<script type="text/javascript" src="js/drag.js"></script>
